@@ -1,5 +1,8 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2014-01-06 mmichaud <m.michael.michaud@orange.fr>
+  * fix a regression in GeometryFunctionPlugIn (non editable layer throws NPE)
+
 2014-01-06 Matthias Scholz <ms@jammerhund.de>
   * Enhancement of the AbstractCursorTool for XOR painting Image's as visual
     indicator too. One usecase is the SuperZoomPanTool. If you use the wheel in
